All_Component_DX/force-app/main/default/objects/SPM_Contract_Penetration__c/SPM_Contract_Penetration__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is to capture details of IBs in system but not covered under any contract/ Warranty</description>
    <label>SPM - Attach Rate</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Attach Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>