All_Component_DX/force-app/main/default/objects/SPM_Contract_Penetration__c/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <description>This field is used to capture configuration name.</description>
    <inlineHelpText>This field is used to capture configuration name.</inlineHelpText>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>