All_Component_DX/force-app/main/default/objects/SPM_Contract_Penetration__c/fields/Processed_On__c.field-meta.xml
<CustomField>
    <fullName>Processed_On__c</fullName>
    <description>This field is to capture the Processed on date.</description>
    <label>Processed On</label>
    <type>Date</type>
</CustomField>