All_Component_DX/force-app/main/default/objects/SPM_Contract_Penetration__c/fields/Run_On__c.field-meta.xml
<CustomField>
    <fullName>Run_On__c</fullName>
    <description>Holds the Engine Run date time for capturing the data.</description>
    <label>Run On</label>
    <type>DateTime</type>
</CustomField>