All_Component_DX/force-app/main/default/objects/SPM_Contract_Penetration__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service/Maintenance Contract.</description>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>SPM_Contract_Penetrations</relationshipName>
    <type>Lookup</type>
</CustomField>